Fix label order name in create page border bottom not visible

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -340,3 +340,6 @@ ion-footer-bar.ng-leave {
 .large {
   font-size: large;
 }
+.above {
+  z-index: 10;
+}
